added simple form with some custom material design

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,10 @@
  *= require_tree .
  *= require_self
  */
+@import "materialize/components/color";
+$primary-color: color("blue", "base") !default;
+$secondary-color: color("amber", "base") !default;
 
 @import "materialize";
 @import "materialize/extras/nouislider";
+@import "components/index";
