--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,5 +15,6 @@
     <%= yield %>
     <%= javascript_include_tag 'application' %>
     <%= yield(:after_js) %>
+    <%= render 'shared/footer' %>
   </body>
 </html>
