added alerts and devise

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,3 +20,4 @@ $secondary-color: color("amber", "base") !default;
 @import "materialize";
 @import "materialize/extras/nouislider";
 @import "components/index";
+@import "pages";
