--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   </head>
   <body>
     <%= render 'shared/navbar' %>
+    <%= render 'shared/notices' %>
     <%= yield %>
     <%= javascript_include_tag 'application' %>
     <%= yield(:after_js) %>
