--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,12 +1,9 @@
   <nav>
     <div class="container">
       <div class="nav-wrapper">
-        <a href="#!" class="brand-logo">Study Buddy</a>
+        <%= link_to "Study Buddy", root_path, class: "brand-logo" %>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#">Sass</a></li>
-          <li><a href="#">Components</a></li>
-          <li><a href="#">Javascript</a></li>
           <% if student_signed_in? %>
             <li><%= link_to "Logout", destroy_student_session_path, method: :delete %></li>
           <% else %>
@@ -15,10 +12,12 @@
           <% end %>
         </ul>
         <ul class="side-nav" id="mobile-demo">
-          <li><a href="#">Sass</a></li>
-          <li><a href="#">Components</a></li>
-          <li><a href="#">Javascript</a></li>
-          <li><a href="#">Mobile</a></li>
+          <% if student_signed_in? %>
+            <li><%= link_to "Logout", destroy_student_session_path, method: :delete %></li>
+          <% else %>
+            <li><%= link_to "Sign in", new_student_session_path %></li>
+            <li><%= link_to "Sign up", new_student_registration_path %></li>
+          <% end %>
         </ul>
       </div>
     </div>
