first layout homepage

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,3 +21,4 @@ $secondary-color: color("amber", "base") !default;
 @import "materialize/extras/nouislider";
 @import "components/index";
 @import "pages";
+@import "homepage";
