--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<div class="bg-img">
+  <div class="bg-transparent">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 banner-content">
+          <div class="cta">
+            <%= link_to '#', class: "waves-effect waves-light btn-large" do %>
+              <i class="material-icons left">search</i>Find your buddy</a>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
